# sonetto-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml  sync-upstream.yml
common/: Cargo.toml
common/src/: lib.rs  time.rs
data/: Cargo.toml
data/codegen/: emit_struct.rs  emit_table.rs
data/excel2json/: achievement.json  achievement_group.json  achievement_task.json  act139_dispatch_task.json  act139_explore_task.json  act139_hero_task.json  act139_sub_hero_task.json  act173_global_task.json  activity.json  activity1001.json  activity1001_ext.json  activity101.json  activity101_doublefestival.json  activity101_dragonboat.json  activity101_festival_const.json  activity101_once_bonus.json  activity101_sp_bonus.json  activity101_springsign.json  activity104_advanced_new.json  activity104_const.json  activity104_episode.json  activity104_equip.json  activity104_equip_attr.json  activity104_equip_tag.json  activity104_retail.json  activity104_retail_new.json  activity104_special.json  activity104_story.json  activity104_trial.json  activity105.json  activity106_minigame.json  activity106_order.json  activity106_task.json  activity107.json  activity107_bubble_group.json  activity107_bubble_talk.json  activity107_bubble_talk_step.json  activity108_dialog.json  activity108_episode.json  activity108_event.json  (+1318 more)
data/src/: lib.rs
database/: Cargo.toml
database/migrations/: 001_users.sql  002_player_state.sql  003_heros.sql  (+32 more)
gameserver/: Cargo.toml
protocol/: Cargo.toml  build.rs  cmd_id.proto  sonetto.proto
sdkserver/: Cargo.toml
(+1608 files in other folders)
