[workspace]
members = [
    "common",
    "crypto",
    "database",
    "gameserver",
    "protocol",
    "sdkserver",
    "data",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2" }
reqwest = "0.12.24"
tokio = { version = "1.48", features = ["full"] }
flate2 = "1.1.5"

prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"

walkdir = "2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
byteorder = "1.5.0"
bytes = "1.11"
hex = "0.4.0"

once_cell = "1.19.0"
rand = "0.8.5"

async-trait = "0.1.88"
emitix = "1.1.3"
dashmap = "5"
lazy_static = "1.5.0"
futures = "0.3.30"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }


# errors
thiserror = "2.0.17"
paste = "1.0.15"
anyhow = "1.0.90"
chrono = "0.4.27"

bcrypt = "0.17.0"

# logging
ansi_term = "0.12.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

common = { path = "common" }
crypto = { path = "crypto" }
database = { path = "database" }
gameserver = { path = "gameserver" }
protocol = { path = "protocol" }
sdkserver = { path = "sdkserver" }
data = { path = "data" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
